# swagger/swagger.yaml
@@ -3,123 +3,48 @@ info:
   version: 1.0.0
   title: Product API
   description: ""
-tags: []
+tags:
+  - name: No Authorization
+    description: No authorization required.
+  - name: Client
+    description: Client authorization.
+  - name: Moderator
+    description: Moderator authorization.
+  - name: Administrator
+    description: Administrator authorization.
+  - name: Product
+  - name: Product by ID
+  - name: User
+  - name: User by ID
+  - name: User Role
 paths:
-  /product:
-    get:
-      tags:
-        - Product
-      security:
-        - JWT: []
-      description: Show all products.
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Product"
-        "401":
-          $ref: "#/components/responses/Authorization401"
-        "403":
-          $ref: "#/components/responses/Authorization403"
-    post:
-      tags:
-        - Product
-      description: Product to be added.
-      security:
-        - JWT: []
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Product"
-        required: "true"
-      responses:
-        "201":
-          description: Product created successfully.
-        "400":
-          description: The input data is not valid.
-        "401":
-          $ref: "#/components/responses/Authorization401"
-        "403":
-          $ref: "#/components/responses/Authorization403"
-  "/product/{productId}":
-    get:
-      tags:
-        - Product by ID
-      description: Returns the product information based on ID.
-      security:
-        - JWT: []
-      parameters:
-        - name: productId
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Product"
-        "401":
-          $ref: "#/components/responses/Authorization401"
-        "403":
-          $ref: "#/components/responses/Authorization403"
-    put:
-      tags:
-        - Product by ID
-      description: Modify product.
-      security:
-        - JWT: []
-      parameters:
-        - name: productId
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Product"
-        description: Product to be modified.
-        required: "true"
-      responses:
-        "200":
-          description: Product modified successfully.
-        "401":
-          $ref: "#/components/responses/Authorization401"
-        "403":
-          $ref: "#/components/responses/Authorization403"
-    delete:
-      tags:
-        - Product by ID
-      description: Product to be deleted.
-      security:
-        - JWT: []
-      parameters:
-        - name: productId
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: Product deleted successfully.
-        "401":
-          $ref: "#/components/responses/Authorization401"
-        "403":
-          $ref: "#/components/responses/Authorization403"
   "/user":
     get:
       tags:
         - User
-      description: Show all users.
+        - Administrator
+      description: Query the database.
+      parameters:
+        - in: query
+          name: _id
+          schema:
+            type: string
+        - in: query
+          name: username
+          schema:
+            type: string
+        - in: query
+          name: email
+          schema:
+            type: string
+        - in: query
+          name: token
+          schema:
+            type: string
+        - in: query
+          name: role
+          schema:
+            type: string
       security:
         - JWT: []
       responses:
@@ -139,6 +64,7 @@ paths:
     post:
       tags:
         - User
+        - No Authorization
       description: Log in.
       requestBody:
         $ref: "#/components/requestBodies/User"
@@ -151,6 +77,7 @@ paths:
     post:
       tags:
         - User
+        - No Authorization
       description: Register new user.
       requestBody:
         $ref: "#/components/requestBodies/User"
@@ -165,6 +92,7 @@ paths:
     get:
       tags:
         - User by ID
+        - Client
       description: Returns the user information based on ID.
       security:
         - JWT: []
@@ -185,115 +113,6 @@ paths:
           $ref: "#/components/responses/Authorization401"
         "403":
           $ref: "#/components/responses/Authorization403"
-    put:
-      tags:
-        - User by ID
-      description: Modify user data.
-      security:
-        - JWT: []
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/User"
-        description: User to be added.
-        required: "true"
-      responses:
-        "200":
-          description: User modified successfully.
-        "401":
-          $ref: "#/components/responses/Authorization401"
-        "403":
-          $ref: "#/components/responses/Authorization403"
-    delete:
-      tags:
-        - User by ID
-      description: User to be deleted.
-      security:
-        - JWT: []
-      parameters:
-        - name: userId
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: User deleted successfully.
-        "401":
-          $ref: "#/components/responses/Authorization401"
-        "403":
-          $ref: "#/components/responses/Authorization403"
-  "/userRole":
-    get:
-      tags:
-        - User Role
-      security:
-        - JWT: []
-      description: Show all user roles.
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/UserRole"
-        "401":
-          $ref: "#/components/responses/Authorization401"
-        "403":
-          $ref: "#/components/responses/Authorization403"
-    post:
-      tags:
-        - User Role
-      description: User role to be added.
-      security:
-        - JWT: []
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UserRole"
-        required: "true"
-      responses:
-        "201":
-          description: User role created successfully.
-        "400":
-          description: The input data is not valid.
-        "401":
-          $ref: "#/components/responses/Authorization401"
-        "403":
-          $ref: "#/components/responses/Authorization403"
-        "409":
-          description: Conflicting entry.
-  "/userRole/{userRoleId}":
-    delete:
-      tags:
-        - User Role
-      description: User role to be deleted.
-      security:
-        - JWT: []
-      parameters:
-        - name: userRoleId
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: User role deleted successfully.
-        "401":
-          $ref: "#/components/responses/Authorization401"
-        "403":
-          $ref: "#/components/responses/Authorization403"
-
 servers:
   - url: http://localhost:4000/api
 components:
@@ -309,7 +128,8 @@ components:
           schema:
             $ref: "#/components/schemas/User"
       required: "true"
-  securitySchemes:
+  
+      securitySchemes:
     JWT:
       type: apiKey
       name: Authorization
